--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "dict2any"
 dynamic = ["version"]
 description = 'dict to/from dataclasses'
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.12"
 license = "MIT"
 keywords = []
 authors = [
@@ -16,10 +16,6 @@ authors = [
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python",
-  "Programming Language :: Python :: 3.8",
-  "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
@@ -27,39 +23,71 @@ classifiers = [
 dependencies = []
 
 [project.urls]
-Documentation = "https://github.com/unknown/dict2any#readme"
-Issues = "https://github.com/unknown/dict2any/issues"
-Source = "https://github.com/unknown/dict2any"
+Documentation = "https://github.com/intentionally-left-nil/dict2any#readme"
+Issues = "https://github.com/intentionally-left-nil/dict2any/issues"
+Source = "https://github.com/intentionally-left-nil/dict2any"
 
 [tool.hatch.version]
 path = "dict2any/__about__.py"
 
+[tool.hatch.build]
+exclude = [
+  "/tests",
+  "/typings"
+]
+
+[tool.hatch.build.targets.wheel]
+packages = ["dict2any"]
+
+
 [tool.hatch.envs.default]
 dependencies = [
-  "coverage[toml]>=6.5",
   "pytest",
+  "pytest-cov>=4.1.0",
 ]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
-test-cov = "coverage run -m pytest {args:tests}"
-cov-report = [
-  "- coverage combine",
-  "coverage report",
-]
-cov = [
-  "test-cov",
-  "cov-report",
-]
-
 [[tool.hatch.envs.all.matrix]]
-python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
+python = ["3.12"]
 
-[tool.hatch.envs.types]
+[tool.hatch.envs.lint]
 dependencies = [
+  "pytest",
+  "pytest-cov>=4.1.0",
+  "black>=23.1.0",
   "mypy>=1.0.0",
+  "isort>=5.12.0"
 ]
-[tool.hatch.envs.types.scripts]
-check = "mypy --install-types --non-interactive {args:dict2any tests}"
+[tool.hatch.envs.lint.scripts]
+typing = "mypy --install-types --non-interactive {args:dict2any tests}"
+style = [
+  "black --check --diff {args:.}",
+  "isort --check --diff {args:.}",
+]
+fmt = [
+  "black {args:.}",
+  "isort {args:.}",
+]
+all = [
+  "style",
+  "typing",
+]
+
+[tool.pytest.ini_options]
+addopts = "--cov --cov-report=xml --cov-report=html --cov-config=.coveragerc"
+
+[tool.black]
+target-version = ["py311"]
+line-length = 120
+skip-string-normalization = true
+
+[tool.isort]
+profile = "black"
+skip_glob = ["env/*"]
+
+[tool.mypy]
+mypy_path = "typings/"
+
 
 [tool.coverage.run]
 source_pkgs = ["dict2any", "tests"]
